# UMSDB

./: .gitignore  db.sqlite3  dsrdfrsg.txt  gana.txt  manage.py  pyproject.toml
DummyData/: Departments.json  Designation.json  Nationality.json  Programs.json  Semester.json  Session.json  User.json
UMSDB/: asgi.py  settings.py  urls.py  wsgi.py
academic/: admin.py  models.py  mutation.py  query.py  schema.py  type.py
academic/mutation/: create.py  delete.py  mutation.py  update.py
api/: mutation.py  query.py  schema.py
app/academic/: admin.py  models.py
app/academic/migrations/: 0001_initial.py
app/academics/: admin.py  apps.py  models.py
app/academics/migrations/: 0001_initial.py  0002_nobin.py  0003_auto_20211201_2354.py  0004_delete_nobin.py  0005_auto_20211203_2354.py
app/alluser/: admin.py  apps.py  models.py
app/alluser/migrations/: 0001_initial.py
app/students/: admin.py  models.py
app/students/migrations/: 0001_initial.py  0002_student_gender.py
core/: admin.py  models.py  mutation.py  query.py  schema.py  type.py
core/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_alter_user_username.py  0004_user_birthcertnumber_user_fathername_and_more.py  0005_alter_user_mobilephone_alter_user_mobilephone2_and_more.py
core/mutation/: create.py  mutation.py  update.py
functions/: converter.py  handle_error.py
layouts/: admin.py  models.py  mutation.py  type.py
semester/: admin.py  models.py  schema.py
settings/: settings.py  urls.py
student/: admin.py  models.py  schema.py
teacher/: admin.py  models.py  schema.py
