[tool.poetry]
name = "UniversityManagementSystem"
version = "0.1.1"
description = "University Management System Graphql Api"
authors = ["NobinKhan <nobin118960@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.2"
django-countries = "^7.2.1"
Pillow = "^9.0.0"
graphene-django = "^2.15.0"
django-cors-headers = "^3.13.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
django-graphiql-debug-toolbar = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
