[tool.poetry]
name = "UniversityManagementSystem"
version = "0.1.1"
description = "University Management System Graphql Api"
authors = ["NobinKhan <nobin118960@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.1"
django-countries = "7.3.2"
Pillow = "9.2.0"
django-cors-headers = "^3.13.0"
graphene-django = {git = "https://github.com/graphql-python/graphene-django.git", rev = "main"}

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
