[tool.poetry]
name = "UniversityManagementSystem"
version = "0.1.1"
description = "University Management System Graphql Api"
authors = ["NobinKhan <nobin118960@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
django-countries = "^7.5"
graphene-django = "^3.0.0"
django-cors-headers = "^3.13.0"
pillow = "^9.3.0"


[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
